--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Viaggio a Londra</title>
 </head>
 <body>
-    
+    <h1>Il mio Viaggio a Londra</h1>
+    <img src="./img/pexels-bill-emrich-230794-0.jpg" alt="Panorama Londra 0">
+    <img src="./img/pexels-bill-emrich-230794-1.jpg" alt="Panorama Londra 1">
+    <img src="./img/pexels-bill-emrich-230794-2.jpg" alt="Panorama Londra 2">
 </body>
 </html>
