[UPD] Inserted costs of airplane tickets

--- a/index.html
+++ b/index.html
@@ -10,5 +10,33 @@
     <img src="./img/pexels-bill-emrich-230794-0.jpg" alt="Panorama Londra 0">
     <img src="./img/pexels-bill-emrich-230794-1.jpg" alt="Panorama Londra 1">
     <img src="./img/pexels-bill-emrich-230794-2.jpg" alt="Panorama Londra 2">
+    <hr>
+    <h2>Le mie spese</h2>
+    <table>
+        <thead>
+            <tr>
+                <th>Numero</th>
+                <th>Descrizione</th>
+                <th>Costo</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>1</td>
+                <td>Biglietto Aereo</td>
+                <td>120&euro;</td>
+            </tr>
+            <tr>
+                <td>1</td>
+                <td>Biglietto Aereo</td>
+                <td>120&euro;</td>
+            </tr>
+            <tr>
+                <td>1</td>
+                <td>Biglietto Aereo</td>
+                <td>120&euro;</td>
+            </tr>
+        </tbody>
+    </table>
 </body>
 </html>
