--- a/index.html
+++ b/index.html
@@ -44,5 +44,14 @@
             </tr>
         </tfoot>
     </table>
+    <hr>
+    <h3>Cose da fare</h3>
+    <ul>
+        <li>Visitare la Tower of London &#10007</li>
+        <li>Visitare Greenwich &#10003</li>
+        <li>Ascoltare un artista di strada a Convent Garden &#10003</li>
+        <li>Mangiare il tipico Fish and Chips inglese &#10007</li>
+    </ul>
+    <hr>
 </body>
 </html>
