[UPD] Inserted photo of the Travel - Esercizio Terminato

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <li>Mangiare il tipico Fish and Chips inglese &#10007;</li>
     </ul>
     <hr>
-        <h3>Info utili:</h3>
+    <h3>Info utili:</h3>
     <ol>
         <li>Numeri utili di emergenza</li>
             <ul>
@@ -73,5 +73,8 @@
             </ul>
     </ol>
     <hr>
+    <h3>Le foto</h3>
+    <img src="./img/london-400x400-compressor_0.jpg" alt="London Compressor">
+    <img src="./img/evening-tower-bridge-and-river-thames-london_u-L-P2QVZJ0.jpg" alt="London Tower Bridge">
 </body>
 </html>
