--- a/index.html
+++ b/index.html
@@ -55,22 +55,25 @@
     <hr>
     <h3>Info utili:</h3>
     <ol>
-        <li>Numeri utili di emergenza</li>
+        <li>Numeri utili di emergenza
             <ul>
                 <li><strong>999</strong> - Emergenza</li>
                 <li><strong>101</strong> - Numero Polizia</li>
                 <li><strong>111</strong> - Numero Assistenza Medica</li>
             </ul>
-        <li>Hotel</li>
+        </li>
+        <li>Hotel
             <ul>
                 <li><strong>Nome hotel:</strong> Buckingham Palace</li>
                 <li><strong>Indirizzo hotel:</strong> Estminster, London SW1A 1AA, Regno Unito</li>
             </ul>
-        <li>Aereo</li>
+        </li>
+        <li>Aereo
             <ul>
                 <li><strong>Volo di Andata:</strong> Y1234X, ore 9.30 da Milano Malpensa</li>
                 <li><strong>Volo di Ritorno:</strong> Y1236X, ore 18:30 da London Heathrow</li>
             </ul>
+        </li>
     </ol>
     <hr>
     <h3>Le foto</h3>
